--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   </head>
-  <body class="bg-gray-100">
-    <div class="container mx-auto p-5">
+  <body class="bg-gray-100 mt-10">
+    <div class=" mx-auto p-5">
       <h1 class="text-2xl font-bold mb-4">Vacation</h1>
 
       <!-- Filter, Search, Entries, Download -->
@@ -44,19 +44,19 @@
         <div class="flex gap-2">
           <button
             onclick="downloadPDF()"
-            class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 w-full"
+            class="bg-blue-600 text-white rounded hover:bg-blue-700 w-full"
           >
-            Download PDF
+             PDF
           </button>
           <button
             onclick="downloadExcel()"
-            class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 w-full"
+            class="bg-green-600 text-white  rounded hover:bg-green-700 w-full"
           >
-            Download Excel
+            Excel
           </button>
           <button
             onclick="window.print()"
-            class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700 w-full"
+            class="bg-gray-600 text-white  rounded hover:bg-gray-700 w-full"
           >
             Print
           </button>
@@ -258,7 +258,7 @@
         },
         {
           name: "Reda Abdelmaged Mohammad Ibrahim",
-          job: "Chif",
+          job: "Service Chief (Landscaping & Irrigation)",
           iqama: "2503732816",
           Sap_Id: "405972",
           group: "lanscipin/irrigation",
