--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <h1 class="text-2xl font-bold mb-4">Vacation</h1>
 
       <!-- Filter, Search, Entries, Download -->
-      <div class="mb-4 grid lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1 gap-2">
-        <div class="flex items-center gap-2">
+      <div class="mb-4 grid lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1 gap-2 overflow-x-auto">
+        <div class="flex items-center gap-2 overflow-x-auto">
           <label for="monthFilter">Filter by Month:</label>
           <select id="monthFilter" class="border border-gray-300 p-1">
             <option value="All">All</option>
