--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   </head>
-  <body class="bg-gray-100 mt-10">
+  <body class="bg-gray-100 mt-10 text-sm">
     <div class=" mx-auto p-5">
       <div class="flex text-center justify-between">
         <!-- <img class="h-[70px]" src="./assts/Nabatatlogo.png" alt=""> -->
-        <h1 class="text-2xl font-bold mb-10 bg-[#84B941] rounded font-mono text-white p-5 text-center">Vacation Record from -4012 (KFIA)</h1>
+        <h1 class="text-xl font-bold mb-10 bg-[#84B941] rounded font-mono text-white p-5 text-center">Vacation Record from -4012 (KFIA)</h1>
         
         <img class="h-[70px] border" src="./assts/Nabatatlogo.png" alt="">
       </div>
@@ -90,7 +90,7 @@
               <th class="border px-4 py-2">Return Date</th>
             </tr>
           </thead>
-          <tbody id="tableBody">
+          <tbody id="tableBody" class="font-mono text-gray-700">
             <!-- Rows will be injected -->
           </tbody>
         </table>
