added some code

--- a/index.html
+++ b/index.html
@@ -278,6 +278,19 @@
           returnDate: "09-5-2025",
         },
         {
+          name: "Adil Khan",
+          job: "Gerdener",
+          iqama: "2517248056",
+          Sap_Id: "407701",
+          group: "FENCE,ROAD,DRAIN( A.Jabbar)",
+          submissionDate: "2025-06-10",
+          vacationMonth: "June",
+          type: "Emergency",
+          total: "30 Days",
+          status: "pending",
+          returnDate: "-",
+        },
+        {
           name: "MANNAN PRODHAN",
           job: "Labour",
           iqama: "2495724227",
