--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         id="tableSection"
       >
         <table class="min-w-full" id="vacationTable">
-          <thead class="bg-gray-200 text-gray-600 text-sm">
+          <thead class="bg-[#84B941] text-white text-sm">
             <tr>
               <th class="border px-4 py-2">S.N</th>
               <th class="border px-4 py-2">Name</th>
@@ -102,7 +102,7 @@
         <div class="flex gap-1" id="paginationControls"></div>
       </div>
     </div>
-    <footer class="text-center mt-10 text-sm text-gray-500 font-mono">
+    <footer class="text-center  mt-10 text-sm text-gray-500 font-mono">
       &copy; All Rights Reserved – Nabatat 4012(Mahabub)
     </footer>
 
