--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
           vacationMonth: "June",
           type: "Emergency",
           total: "30 Days",
-          status: "pending",
+          status: "rejected",
           returnDate: "-",
         },
         {
@@ -495,6 +495,32 @@
           vacationMonth: "September",
           type: "Normal",
           total: "44 Days",
+          status: "pending",
+          returnDate: "-",
+        },
+        {
+          name: "Shadat Hossan",
+          job: "Driver	",
+          iqama: "2234812275",
+          Sap_Id: "413721",
+          group: "Nursery",
+          submissionDate: "2025-06-15",
+          vacationMonth: "June",
+          type: "Emergency",
+          total: "45 Days",
+          status: "pending",
+          returnDate: "-",
+        },
+        {
+          name: "MONIR HOSSAIN",
+          job: "Gerdener",
+          iqama: "2509143893",
+          Sap_Id: "407469",
+          group: "FENCE,ROAD,DRAIN(Ahmed)",
+          submissionDate: "2025-05-15",
+          vacationMonth: "October",
+          type: "Normal",
+          total: "60 Days",
           status: "pending",
           returnDate: "-",
         },
