added all data for vaction

--- a/index.html
+++ b/index.html
@@ -524,6 +524,58 @@
           status: "pending",
           returnDate: "-",
         },
+        {
+          name: "AKMAN BAPARI",
+          job: "Labour",
+          iqama: "2522266622",
+          Sap_Id: "407594",
+          group: "Nursery",
+          submissionDate: "2025-05-15",
+          vacationMonth: "October",
+          type: "Normal",
+          total: "90 Days",
+          status: "pending",
+          returnDate: "-",
+        },
+        {
+          name: "Sher Shah",
+          job: "Safety Officer",
+          iqama: "2443400342",
+          Sap_Id: "401785",
+          group: "MANAGMENT",
+          submissionDate: "2025-05-15",
+          vacationMonth: "October",
+          type: "Normal",
+          total: "60 Days",
+          status: "pending",
+          returnDate: "-",
+        },
+        {
+          name: "Khan Muhammad",
+          job: "Gardener",
+          iqama: "2522902366",
+          Sap_Id: "407812",
+          group: "Parking Garage",
+          submissionDate: "2025-05-15",
+          vacationMonth: "October",
+          type: "Normal",
+          total: "60 Days",
+          status: "pending",
+          returnDate: "-",
+        },
+        {
+          name: "Immuddin Mohd Abdul Gaffar",
+          job: "PLUMBER",
+          iqama: "2272775707",
+          Sap_Id: "401792",
+          group: "Messhall",
+          submissionDate: "2025-05-15",
+          vacationMonth: "October",
+          type: "Normal",
+          total: "90 Days",
+          status: "pending",
+          returnDate: "-",
+        },
         // Add more rows for testing
       ];
 
