added some code

--- a/index.html
+++ b/index.html
@@ -687,6 +687,19 @@
           status: "pending",
           returnDate: "-",
         },
+        {
+          name: "Mohammad Jahangir",
+          job: "Masion",
+          iqama: "2524173487",
+          Sap_Id: "408144",
+          group: "Camp -Security",
+          submissionDate: "2025-05-16",
+          vacationMonth: "October",
+          type: "Normal",
+          total: "60 Days",
+          status: "pending",
+          returnDate: "-",
+        },
       
         // Add more rows for testing
       ];
