added joining data for wasim

--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
           vacationMonth: "April",
           type: "Normal",
           total: "90 Days",
-          status: "vacation",
-          returnDate: "23-June-2025",
+          status: "on-job",
+          returnDate: "22-June-2025",
         },
         {
           name: "Hanif  Malo  Miah",
