--- a/index.html
+++ b/index.html
@@ -608,6 +608,19 @@
           status: "pending",
           returnDate: "-",
         },
+        {
+          name: "Afrazier Nassal",
+          job: "Civil Engineer",
+          iqama: "2483842916",
+          Sap_Id: "401750",
+          group: "MANAGMENT",
+          submissionDate: "2025-06-19",
+          vacationMonth: "September",
+          type: "Normal",
+          total: "42 Days",
+          status: "pending",
+          returnDate: "-",
+        },
        
         {
           name: "MONIR HOSSAIN",
