added all data one time

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
           vacationMonth: "June",
           type: "Emergency",
           total: "45 Days",
-          status: "pending",
+          status: "",
           returnDate: "-",
         },
         {
@@ -369,8 +369,8 @@
           vacationMonth: "July",
           type: "Normal",
           total: "90 Days",
-          status: "pending",
-          returnDate: "-",
+          status: "approved",
+          returnDate: "26-Sep-25",
         },
         {
           name: "YAZAN ABU OBAYD",
