--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
           vacationMonth: "June",
           type: "Emergency",
           total: "45 Days",
-          status: "",
+          status: "vacation",
           returnDate: "-",
         },
         {
@@ -382,8 +382,8 @@
           vacationMonth: "July",
           type: "Normal",
           total: "20 Days",
-          status: "pending",
-          returnDate: "-",
+          status: "approved",
+          returnDate: "25-July-25",
         },
         {
           name: "MANNAN PRODHAN",
@@ -395,8 +395,8 @@
           vacationMonth: "May",
           type: "Emergency",
           total: "45 Days",
-          status: "Vacation",
-          returnDate: "-",
+          status: "on-job",
+          returnDate: "26-Jun-25",
         },
         {
           name: "Shafiqui Houssin",
@@ -408,8 +408,8 @@
           vacationMonth: "May",
           type: "Emergency",
           total: "35 Days",
-          status: "Vacation",
-          returnDate: "-",
+          status: "on-job",
+          returnDate: "26-Jun-25",
         },
         {
           name: "MD Sohag",
