--- a/index.html
+++ b/index.html
@@ -399,6 +399,19 @@
           returnDate: "26-Jun-25",
         },
         {
+          name: "Delower Hossain",
+          job: "Foreman",
+          iqama: "2195631219",
+          Sap_Id: "401811",
+          group: "Inside The Terminal/Indoor Plant",
+          submissionDate: "2025-05-05",
+          vacationMonth: "May",
+          type: "Emergency",
+          total: "45 Days",
+          status: "on-job",
+          returnDate: "03-July-25",
+        },
+        {
           name: "Shafiqui Houssin",
           job: "Horticulturist",
           iqama: "2184317804",
