--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
           vacationMonth: "April",
           type: "Normal",
           total: "60 Days",
-          status: "vacation",
-          returnDate: "30-July-2025",
+          status: "ON-JOB",
+          returnDate: "05-July-2025",
         },
         {
           name: "Khalid  Mohammad",
