--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           vacationMonth: "April",
           type: "Normal",
           total: "60 Days",
-          status: "ON-JOB",
+          status: "on-job",
           returnDate: "05-July-2025",
         },
         {
@@ -144,8 +144,8 @@
           vacationMonth: "April",
           type: "Normal",
           total: "60 Days",
-          status: "vacation",
-          returnDate: "03-July-2025",
+          status: "on-job",
+          returnDate: "05-July-2025",
         },
         {
           name: "ABDUL  JABBAR",
