added some data

--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
           vacationMonth: "April",
           type: "Normal",
           total: "60 Days",
-          status: "vacation",
-          returnDate: "03-July-2025",
+          status: "on-job",
+          returnDate: "07-July-2025",
         },
         {
           name: "Mohammad  Abu  Kaowsar",
