added some code

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
           job: "Labour",
           iqama: "2495723666",
           Sap_Id: "405488",
-          group: "Nursery",
+          group: "Inside The Terminal/Indoor Plant",
           submissionDate: "2025-02-03",
           vacationMonth: "May",
           type: "Normal",
