added the vacation more peploe

--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
           vacationMonth: "May",
           type: "Normal",
           total: "90 Days",
-          status: "vacation",
-          returnDate: "02-August-2025",
+          status: "on-job",
+          returnDate: "07-July-2025",
         },
       
         {
@@ -710,6 +710,20 @@
           vacationMonth: "October",
           type: "Normal",
           total: "60 Days",
+          status: "pending",
+          returnDate: "-",
+        },
+       
+        {
+          name: "SADIK SAIDUR MAHADI",
+          job: "SUPARVISOR",
+          iqama: "1009306679",
+          Sap_Id: "401730",
+          group: "Inside the terminal",
+          submissionDate: "2025-07-13",
+          vacationMonth: "July",
+          type: "Normal",
+          total: "28 Days",
           status: "pending",
           returnDate: "-",
         },
