added some code

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
           vacationMonth: "July",
           type: "Normal",
           total: "90 Days",
-          status: "approved",
+          status: "vacation",
           returnDate: "26-Sep-25",
         },
         {
@@ -382,7 +382,7 @@
           vacationMonth: "July",
           type: "Normal",
           total: "20 Days",
-          status: "approved",
+          status: "vacation",
           returnDate: "25-July-25",
         },
         {
