--- a/index.html
+++ b/index.html
@@ -727,6 +727,19 @@
           status: "pending",
           returnDate: "-",
         },
+        {
+          name: "Abul Kalam Aminnuddin",
+          job: "Labour",
+          iqama: "2465439194",
+          Sap_Id: "401776",
+          group: "Irrigation",
+          submissionDate: "2025-JULY-21",
+          vacationMonth: "July",
+          type: "Emergency",
+          total: "30 Days",
+          status: "pending",
+          returnDate: "-",
+        },
        
       
         // Add more rows for testing
