update joining date from coming from normal vacation

--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
           vacationMonth: "May",
           type: "Normal",
           total: "60 Days",
-          status: "vacation",
-          returnDate: "21-July-2025",
+          status: "ON-JOB",
+          returnDate: "26-July-2025",
         },
         {
           name: "Main Uddin",
@@ -261,8 +261,8 @@
           vacationMonth: "May",
           type: "Normal",
           total: "60 Days",
-          status: "vacation",
-          returnDate: "21-July-2025",
+          status: "ON-JOB",
+          returnDate: "22-July-2025",
         },
         {
           name: "Shams Ul Arifeen",
@@ -382,8 +382,8 @@
           vacationMonth: "July",
           type: "Normal",
           total: "20 Days",
-          status: "vacation",
-          returnDate: "25-July-25",
+          status: "ON-JOB",
+          returnDate: "26-July-25",
         },
         {
           name: "MANNAN PRODHAN",
