update some joning date

--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
           vacationMonth: "May",
           type: "Normal",
           total: "60 Days",
-          status: "vacation",
-          returnDate: "21-July-2025",
+          status: "ON-JOB",
+          returnDate: "22-July-2025",
         },
         {
           name: "Muhammad Wasid Sayed",
@@ -235,8 +235,8 @@
           vacationMonth: "May",
           type: "Normal",
           total: "60 Days",
-          status: "vacation",
-          returnDate: "21-July-2025",
+          status: "ON-JOB",
+          returnDate: "22-July-2025",
         },
         {
           name: "MD KANCHAN",
