added some code

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           vacationMonth: "May",
           type: "Normal",
           total: "60 Days",
-          status: "ON-JOB",
+          status: "on-job",
           returnDate: "22-July-2025",
         },
         {
@@ -290,8 +290,8 @@
           vacationMonth: "May",
           type: "Normal",
           total: "60 Days",
-          status: "vacation",
-          returnDate: "02-August-2025",
+          status: "on-job",
+          returnDate: "03-August-2025",
         },
         {
           name: "MD  FARUK  MIAH",
@@ -317,8 +317,8 @@
           vacationMonth: "May",
           type: "Normal",
           total: "90 Days",
-          status: "vacation",
-          returnDate: "02-August-2025",
+          status: "on-job",
+          returnDate: "03-August-2025",
         },
         {
           name: "Reda Abdelmaged Mohammad Ibrahim",
@@ -356,8 +356,8 @@
           vacationMonth: "June",
           type: "Emergency",
           total: "45 Days",
-          status: "vacation",
-          returnDate: "-",
+          status: "on-job",
+          returnDate: "03-Aug-25",
         },
         {
           name: "NURE ALAM",
