added the all code

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
           vacationMonth: "April",
           type: "Normal",
           total: "90 Days",
-          status: "vacation",
-          returnDate: "01-August-2025",
+          status: "on-job",
+          returnDate: "02-August-2025",
         },
         {
           name: "WASEEM CHHIMPA",
@@ -442,7 +442,7 @@
           job: "Labour",
           iqama: "2519461897",
           Sap_Id: "407811",
-          group: "FENCE,ROAD,DRAIN( A.Jabbar)",
+          group: "FENCE,ROAD,DRAIN",
           submissionDate: "2025-06-05",
           vacationMonth: "August",
           type: "Normal",
@@ -455,7 +455,7 @@
           job: "Labour",
           iqama: "2515012033",
           Sap_Id: "410335",
-          group: "FENCE,ROAD,DRAIN( A.Jabbar)",
+          group: "FENCE,ROAD,DRAIN",
           submissionDate: "2025-06-05",
           vacationMonth: "August",
           type: "Normal",
@@ -468,7 +468,7 @@
           job: "Labour",
           iqama: "2515011902",
           Sap_Id: "410334",
-          group: "FENCE,ROAD,DRAIN( A.Jabbar)",
+          group: "FENCE,ROAD,DRAIN",
           submissionDate: "2025-06-05",
           vacationMonth: "August",
           type: "Normal",
@@ -737,7 +737,7 @@
           vacationMonth: "July",
           type: "Emergency",
           total: "30 Days",
-          status: "pending",
+          status: "cancel",
           returnDate: "-",
         },
        
