--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
           vacationMonth: "July",
           type: "Emergency",
           total: "30 Days",
-          status: "cancel",
+          status: "rejected",
           returnDate: "-",
         },
        
