update the code

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
           vacationMonth: "April",
           type: "Normal",
           total: "90 Days",
-          status: "vacation",
-          returnDate: "02-August-2025",
+          status: "on-job",
+          returnDate: "03-August-2025",
         },
         {
           name: "Adil  Mohammed  Habib",
@@ -196,8 +196,8 @@
           vacationMonth: "April",
           type: "Normal",
           total: "90 Days",
-          status: "vacation",
-          returnDate: "02-August-2025",
+          status: "on-job",
+          returnDate: "03-August-2025",
         },
         {
           name: "Omar  Mokhtar  Elsayed",
@@ -697,7 +697,7 @@
           vacationMonth: "October",
           type: "Normal",
           total: "60 Days",
-          status: "pending",
+          status: "rejected",
           returnDate: "-",
         },
         {
@@ -724,7 +724,7 @@
           vacationMonth: "July",
           type: "Normal",
           total: "28 Days",
-          status: "pending",
+          status: "vacation",
           returnDate: "-",
         },
         {
